--- a/mpqc/lib/basis/augmentation-cc-pv5z.kv
+++ b/mpqc/lib/basis/augmentation-cc-pv5z.kv
@@ -1,4 +1,544 @@
 basis:(
+%Elements                             References
+%--------                             ---------
+% H    :  T.H. Dunning, Jr. J. Chem. Phys. 90, 1007 (1989).
+%         Diffuse s exponent - S. Mielke
+% He   :  D.E. Woon and T.H. Dunning, Jr., J. Chem. Phys. 100, 2975 (1994).
+% B - F:  R.A. Kendall, T.H. Dunning, Jr. and R.J. Harrison, J. Chem. Phys. 96,
+%         6769 (1992).
+%Al - Cl: D.E. Woon and T.H. Dunning, Jr. J. Chem. Phys. 98, 1358 (1993).
+%
+%
+% BASIS SET: (1s,1p,1d,1f,1g)
+ hydrogen: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.020700000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.074400000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.156000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.274000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.543000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ boron: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.026100000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.015700000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.043100000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.084300000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.202000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.384000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ carbon: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.039400000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.027200000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.070100000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.138000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.319000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.586000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ nitrogen: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.051800000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.036900000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.097100000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.192000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.436000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.788000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ oxygen: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.065500000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.044600000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.131000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.237000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.517000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            1.024000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ fluorine: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.080600000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.055000000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.172000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.331000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.663000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            1.326000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ neon: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.095700000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.065400000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.213000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.425000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.809000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            1.628000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ aluminum: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.017700000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.011500000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.029400000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.050900000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.106900000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.227000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ silicon: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.026000000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.019200000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.046800000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.073500000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.151000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.323000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ phosphorus: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.033500000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.025300000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.062400000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.095000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.184000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.372000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ sulfur: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.042000000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.029400000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.079400000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.118800000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.220000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.472000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ chlorine: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.047900000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.034800000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.100300000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.164000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.277000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.607000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ argon: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.053800000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.040200000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.121000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.209000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.334000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.742000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ gallium: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.017301000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.011050000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.026000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.051100000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.114000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.254000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ germanium: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.024274000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.017593000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.036400000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.070500000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.146000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.320000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ arsenic: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.029418000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.022043000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.048800000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.089900000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.165500000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.366800000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ selenium: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.033935000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.024975000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.054800000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.099200000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.183000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.402000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ bromine: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.039106000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.029052000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.078100000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.138800000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.219000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.491000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: (1s,1p,1d,1f,1g,1h)
+ krypton: "augmentation-cc-pV5Z": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.044277000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.033129000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.101400000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.178400000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.255000000      1.00000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+            0.580000000      1.00000000
+   })
+ ]
+)
+
+basis:(
 % Correlation Consistent Basis Set for  Sc
 % N.B. Balabanov and K.A. Peterson, J. Chem. Phys. 123, 064107 (2005)
 % Nonrelativistic correlation consistent polarized  Valence Quintuple-zeta Basis Set for Sc, Augmenting Functions
