--- a/mpqc/lib/basis/augmentation-cc-pvqz.kv
+++ b/mpqc/lib/basis/augmentation-cc-pvqz.kv
@@ -1,4 +1,466 @@
 basis:(
+%Elements                             References
+%--------                             ---------
+% H    :  T.H. Dunning, Jr. J. Chem. Phys. 90, 1007 (1989).
+% He   :  D.E. Woon and T.H. Dunning, Jr., J. Chem. Phys. 100, 2975 (1994).
+% B - F:  R.A. Kendall, T.H. Dunning, Jr. and R.J. Harrison, J. Chem. Phys. 96,
+%         6769 (1992).
+%Al - Cl: D.E. Woon and T.H. Dunning, Jr. J. Chem. Phys. 98, 1358 (1993).
+%
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f)
+ hydrogen: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.023630000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.084800000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.190000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.360000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ boron: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.027210000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.018780000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.046600000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.113000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.273000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ carbon: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.041450000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.032180000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.076600000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.187000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.424000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ nitrogen: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.054640000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.044020000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.111000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.245000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.559000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ oxygen: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.069590000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.053480000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.154000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.324000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.714000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ fluorine: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.085940000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.065680000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.207000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.460000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.924000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ neon: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.105400000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.081780000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.273000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.689000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            1.224000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ aluminum: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.018300000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.012100000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.028200000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.058200000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.153000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ silicon: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.027500000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.020000000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.043500000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.084600000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.212000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ phosphorus: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.035400000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.027200000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.059400000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.109000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.250000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ sulfur: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.042800000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.031700000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.074800000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.140000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.297000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ chlorine: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.051900000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.037600000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.095200000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.217000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.378000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ argon: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.061000000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.043500000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.116000000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.294000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.459000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ gallium: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.018475000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.011406000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.027900000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.065500000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.168000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ germanium: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.026390000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.018550000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.039700000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.088400000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.214300000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ arsenic: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.032499000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.023698000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.053100000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.113200000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.239000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ selenium: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.038152000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.026569000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.061900000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.124000000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.263000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ bromine: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.044270000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.030513000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.082900000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.174800000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.311000000      1.00000000
+   })
+ ]
+%
+% BASIS SET: Diffuse (1s,1p,1d,1f,1g)
+ krypton: "augmentation-cc-pVQZ": [
+  (type: [am = s]
+   {exp coef:0} = {
+            0.050388000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.034457000      1.00000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+            0.103900000      1.00000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+            0.225600000      1.00000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+            0.359000000      1.00000000
+   })
+ ]
+)
+basis:(
 % Correlation Consistent Basis Set for  Sc
 % N.B. Balabanov and K.A. Peterson, J. Chem. Phys. 123, 064107 (2005)
 % Nonrelativistic correlation consistent polarized  Valence Quadruple-zeta Basis Set for Sc, Augmenting Functions
