Added Ne basis.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408033

--- a/mpqc/lib/basis/aug-cc-pcvdz.kv
+++ b/mpqc/lib/basis/aug-cc-pcvdz.kv
@@ -299,6 +299,62 @@ basis:(
    })
  ]
 %
+% BASIS SET: (9s,4p,1d) -> [3s,2p,1d]
+% AUGMENTING FUNCTIONS: Tight (1s,1p)
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
+% Note: this basis is not in EMSL basis set database, rather, created manually.  -EFV
+ neon: "aug-cc-pCVDZ": [
+  (type: [am = s am = s]
+   {exp coef:0 coef:1} = {
+      17880.000000      0.73800000000E-03 -0.17200000000E-03
+      2683.0000000      0.56770000000E-02 -0.13570000000E-02
+      611.50000000      0.28883000000E-01 -0.67370000000E-02
+      173.50000000      0.10854000000     -0.27663000000E-01
+      56.640000000      0.29090700000     -0.76208000000E-01
+      20.420000000      0.44832400000     -0.17522700000
+      7.8100000000      0.25802600000     -0.10703800000
+      1.6530000000      0.15063000000E-01  0.56705000000
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.48690000000       1.0000000000
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+      12.854000000       1.0000000000
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.12300000000       1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      28.390000000      0.46087000000E-01
+      6.2700000000      0.24018100000
+      1.6950000000      0.50874400000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.43170000000       1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      40.184000000       1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.10640000000       1.0000000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+      2.2020000000       1.0000000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+     0.63100000000       1.0000000000
+   })
+ ]
+%
 % BASIS SET: (12s,8p,1d) -> [4s,3p,1d]
 % AUGMENTING FUNCTIONS: Tight (1s,1p,1d)
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
