added ne basis set.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408034

--- a/mpqc/lib/basis/aug-cc-pcv5z.kv
+++ b/mpqc/lib/basis/aug-cc-pcv5z.kv
@@ -913,4 +913,182 @@ basis:(
       1.3260000000       1.0000000000    
    })
  ]
+%
+% BASIS SET: (14s,8p,4d,3f,2g,1h) -> [6s,5p,4d,3f,2g,1h]
+% AUGMENTING FUNCTIONS: Tight (s,p,d,f,g)
+% AUGMENTING FUNCTIONS: (1s,1p,1d,1f,1g,1h)
+ neon: "aug-cc-pCV5Z": [    
+  (type: [am = s am = s]
+   {exp coef:0 coef:1} = {
+      262700.00000      0.26000000000E-04 -0.60000000000E-05
+      39350.000000      0.20000000000E-03 -0.47000000000E-04
+      8955.0000000      0.10500000000E-02 -0.24700000000E-03
+      2538.0000000      0.44000000000E-02 -0.10380000000E-02
+      829.90000000      0.15649000000E-01 -0.37110000000E-02
+      301.50000000      0.47758000000E-01 -0.11593000000E-01
+      119.00000000      0.12294300000     -0.31086000000E-01
+      50.000000000      0.25248300000     -0.70972000000E-01
+      21.980000000      0.36631400000     -0.12726600000
+      9.8910000000      0.27961700000     -0.15123100000
+   })
+  (type: [am = s] 
+   {exp coef:0} = {      
+      4.3270000000       1.0000000000
+   })
+  (type: [am = s] 
+   {exp coef:0} = {
+      1.8040000000       1.0000000000
+   })
+  (type: [am = s] 
+   {exp coef:0} = {      
+     0.72880000000       1.0000000000
+   })
+  (type: [am = s] 
+   {exp coef:0} = {      
+     0.28670000000       1.0000000000
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+      24.313000000       1.0000000000
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+      54.680000000       1.0000000000
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+      122.97500000       1.0000000000
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+      276.57100000       1.0000000000
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.95700000000E-01   1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      299.10000000      0.10380000000E-02
+      70.730000000      0.83750000000E-02
+      22.480000000      0.39693000000E-01
+      8.2460000000      0.12805600000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      3.2690000000       1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      1.3150000000       1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.51580000000       1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.19180000000       1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      21.309000000       1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      53.720000000       1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      135.42800000       1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      341.41400000       1.0000000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.65400000000E-01   1.0000000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+      9.8370000000       1.0000000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+      3.8440000000       1.0000000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+      1.5020000000       1.0000000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+     0.58700000000       1.0000000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+      27.044000000       1.0000000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+      75.750000000       1.0000000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+      212.17600000       1.0000000000
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+     0.21300000000       1.0000000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+      7.0900000000       1.0000000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+      2.7380000000       1.0000000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+      1.0570000000       1.0000000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+      28.029000000       1.0000000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+      102.58600000       1.0000000000
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+     0.42500000000       1.0000000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+      5.4600000000       1.0000000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+      1.8800000000       1.0000000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+      38.794000000       1.0000000000
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+     0.80900000000       1.0000000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+      3.7760000000       1.0000000000
+   })
+  (type: [(am = h puream = 1)]
+   {exp coef:0} = {
+      1.6280000000       1.0000000000
+   })
+ ]
 )
