Renamed cc-pwCVXZ basis sets for Sc-Zn to cc-pwCVXZ-NR so that they conform to the EMSL database contents.
--HG--
rename : mpqc/lib/basis/cc-pwcv5z.kv => mpqc/lib/basis/cc-pwcv5z-nr.kv
rename : mpqc/lib/basis/cc-pwcvqz.kv => mpqc/lib/basis/cc-pwcvqz-nr.kv
rename : mpqc/lib/basis/cc-pwcvtz.kv => mpqc/lib/basis/cc-pwcvtz-nr.kv
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409350

--- a/mpqc/lib/basis/cc-pwcv5z-nr.kv
+++ b/mpqc/lib/basis/cc-pwcv5z-nr.kv
@@ -4,7 +4,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quintuple-zeta Basis Set for Sc
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- scandium: "cc-pwCV5Z": [
+ scandium: "cc-pwCV5Z-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9 coef:10} = {
  1.194950E+08  6.485949E-08 -3.759394E-08  7.277775E-09 -1.751768E-09  3.023751E-09 -4.699340E-09 -5.382706E-09  8.181715E-09  0.000000E+00  0.000000E+00  0.000000E+00
@@ -112,7 +112,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quintuple-zeta Basis Set for Ti
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- titanium: "cc-pwCV5Z": [
+ titanium: "cc-pwCV5Z-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9 coef:10} = {
  1.226470E+08  7.095361E-08 -4.075872E-08  8.126533E-09 -1.917924E-09  3.549931E-09 -5.483292E-09 -6.513149E-09 -8.931375E-09  0.000000E+00  0.000000E+00  0.000000E+00
@@ -220,7 +220,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quintuple-zeta Basis Set for V
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- vanadium: "cc-pwCV5Z": [
+ vanadium: "cc-pwCV5Z-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9 coef:10} = {
  1.283490E+08  7.559082E-08 -4.233311E-08  8.764631E-09 -2.028614E-09 -3.919381E-09 -6.069160E-09 -7.379510E-09 -9.582444E-09  0.000000E+00  0.000000E+00  0.000000E+00
@@ -328,7 +328,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quintuple-zeta Basis Set for Cr
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- chromium: "cc-pwCV5Z": [
+ chromium: "cc-pwCV5Z-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9 coef:10} = {
  1.355400E+08  7.860909E-08 -4.393198E-08  9.262175E-09 -2.100265E-09 -4.146642E-09 -6.488897E-09 -8.057731E-09 -1.001431E-08  0.000000E+00  0.000000E+00  0.000000E+00
@@ -436,7 +436,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quintuple-zeta Basis Set for Mn
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- manganese: "cc-pwCV5Z": [
+ manganese: "cc-pwCV5Z-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9 coef:10} = {
  1.377660E+08  8.842975E-08 -4.218706E-08  1.015457E-08 -2.246625E-09 -4.534252E-09 -7.148000E-09  8.949441E-09 -1.066381E-08  0.000000E+00  0.000000E+00  0.000000E+00
@@ -544,7 +544,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quintuple-zeta Basis Set for Fe
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- iron: "cc-pwCV5Z": [
+ iron: "cc-pwCV5Z-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9 coef:10} = {
  1.497690E+08  8.657560E-08 -4.466833E-08  1.025471E-08 -2.217427E-09 -4.424824E-09 -7.310611E-09  9.015017E-09 -1.054576E-08  0.000000E+00  0.000000E+00  0.000000E+00
@@ -652,7 +652,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quintuple-zeta Basis Set for Co
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- cobalt: "cc-pwCV5Z": [
+ cobalt: "cc-pwCV5Z-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9 coef:10} = {
  1.610300E+08  8.662183E-08 -4.556183E-08  1.041562E-08 -2.200797E-09 -4.305752E-09 -7.600240E-09  9.197016E-09 -1.070534E-08  0.000000E+00  0.000000E+00  0.000000E+00
@@ -760,7 +760,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quintuple-zeta Basis Set for Ni
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- nickel: "cc-pwCV5Z": [
+ nickel: "cc-pwCV5Z-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9 coef:10} = {
  1.687930E+08  9.544814E-08 -3.340483E-08  1.123242E-08 -2.340836E-09 -4.519782E-09 -7.967881E-09  9.963678E-09  1.108501E-08  0.000000E+00  0.000000E+00  0.000000E+00
@@ -868,7 +868,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quintuple-zeta Basis Set for Cu
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- copper: "cc-pwCV5Z": [
+ copper: "cc-pwCV5Z-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9 coef:10} = {
  1.931880E+08  8.189248E-08 -4.611013E-08  1.018420E-08 -2.054681E-09  3.816605E-09 -7.757240E-09  9.028583E-09  1.075970E-08  0.000000E+00  0.000000E+00  0.000000E+00
@@ -976,7 +976,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quintuple-zeta Basis Set for Zn
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- zinc: "cc-pwCV5Z": [
+ zinc: "cc-pwCV5Z-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9 coef:10} = {
  1.874130E+08  1.009014E-07 -3.115741E-08  1.176468E-08 -2.356493E-09  6.708866E-09 -9.317884E-09  1.206066E-08  1.288013E-08  0.000000E+00  0.000000E+00  0.000000E+00
