--- a/mpqc/lib/basis/cc-pwcvqz-nr.kv
+++ b/mpqc/lib/basis/cc-pwcvqz-nr.kv
@@ -4,7 +4,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quadruple-zeta Basis Set for Sc
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- scandium: "cc-pwCVQZ": [
+ scandium: "cc-pwCVQZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9} = {
  8.417909E+06  1.981292E-06 -1.147926E-06  2.221960E-07 -5.350285E-08 -9.140993E-08 -1.445075E-07 -1.607992E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -95,7 +95,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quadruple-zeta Basis Set for Ti
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- titanium: "cc-pwCVQZ": [
+ titanium: "cc-pwCVQZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9} = {
  9.317034E+06  1.967884E-06 -1.130007E-06  2.252735E-07 -5.318433E-08 -9.711872E-08 -1.533644E-07 -1.764526E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -186,7 +186,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quadruple-zeta Basis Set for V
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- vanadium: "cc-pwCVQZ": [
+ vanadium: "cc-pwCVQZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9} = {
  1.025178E+07  1.966291E-06 -1.100923E-06  2.278854E-07 -5.275948E-08 -1.003479E-07 -1.592148E-07 -1.885199E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -277,7 +277,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quadruple-zeta Basis Set for Cr
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- chromium: "cc-pwCVQZ": [
+ chromium: "cc-pwCVQZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9} = {
  1.101664E+07  2.002522E-06 -1.118844E-06  2.358227E-07 -5.343793E-08 -1.038573E-07 -1.671645E-07 -2.018526E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -368,7 +368,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quadruple-zeta Basis Set for Mn
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- manganese: "cc-pwCVQZ": [
+ manganese: "cc-pwCVQZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9} = {
  1.221050E+07  2.018537E-06 -9.633574E-07  2.316977E-07 -5.127786E-08 -1.017421E-07 -1.642320E-07 -2.001522E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -459,7 +459,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quadruple-zeta Basis Set for Fe
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- iron: "cc-pwCVQZ": [
+ iron: "cc-pwCVQZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9} = {
  1.327714E+07  1.976511E-06 -1.020185E-06  2.340322E-07 -5.062297E-08 -9.957952E-08 -1.678013E-07 -1.979190E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -550,7 +550,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quadruple-zeta Basis Set for Co
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- cobalt: "cc-pwCVQZ": [
+ cobalt: "cc-pwCVQZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9} = {
  1.437022E+07  1.961579E-06 -1.032046E-06  2.357772E-07 -4.983880E-08 -9.633772E-08 -1.733620E-07 -1.968109E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -641,7 +641,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quadruple-zeta Basis Set for Ni
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- nickel: "cc-pwCVQZ": [
+ nickel: "cc-pwCVQZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9} = {
  1.550302E+07  2.085023E-06 -7.298155E-07  2.453237E-07 -5.114261E-08 -9.762069E-08 -1.771733E-07 -1.988311E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -732,7 +732,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quadruple-zeta Basis Set for Cu
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- copper: "cc-pwCVQZ": [
+ copper: "cc-pwCVQZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9} = {
  1.666549E+07  1.922210E-06 -1.082642E-06  2.389605E-07 -4.823436E-08 -8.876635E-08 -1.849356E-07 -1.980951E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -823,7 +823,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Quadruple-zeta Basis Set for Zn
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- zinc: "cc-pwCVQZ": [
+ zinc: "cc-pwCVQZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8 coef:9} = {
  1.785293E+07  2.106603E-06 -6.503871E-07  2.455424E-07  4.916948E-08 -1.379282E-07 -1.951222E-07 -2.631275E-07  0.000000E+00  0.000000E+00  0.000000E+00
