--- a/mpqc/lib/basis/cc-pwcvtz-nr.kv
+++ b/mpqc/lib/basis/cc-pwcvtz-nr.kv
@@ -4,7 +4,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Triple-zeta Basis Set for Sc
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- scandium: "cc-pwCVTZ": [
+ scandium: "cc-pwCVTZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8} = {
  2.715278E+06  8.147221E-06 -4.722109E-06  9.139905E-07 -2.201951E-07 -3.757238E-07 -5.962768E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -81,7 +81,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Triple-zeta Basis Set for Ti
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- titanium: "cc-pwCVTZ": [
+ titanium: "cc-pwCVTZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8} = {
  3.014643E+06  8.060782E-06 -4.630486E-06  9.230559E-07 -2.180323E-07 -3.975126E-07 -6.302483E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -158,7 +158,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Triple-zeta Basis Set for V
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- vanadium: "cc-pwCVTZ": [
+ vanadium: "cc-pwCVTZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8} = {
  3.321857E+06  8.039999E-06 -4.503003E-06  9.320648E-07 -2.158944E-07 -4.093416E-07 -6.539963E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -235,7 +235,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Triple-zeta Basis Set for Cr
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- chromium: "cc-pwCVTZ": [
+ chromium: "cc-pwCVTZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8} = {
  6.177194E+06  4.128667E-06 -2.301772E-06  4.862957E-07 -1.102451E-07  2.179893E-07 -3.669010E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -312,7 +312,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Triple-zeta Basis Set for Mn
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- manganese: "cc-pwCVTZ": [
+ manganese: "cc-pwCVTZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8} = {
  3.960805E+06  8.242127E-06 -3.936095E-06  9.462709E-07 -2.095391E-07 -4.121231E-07 -6.805493E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -389,7 +389,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Triple-zeta Basis Set for Fe
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- iron: "cc-pwCVTZ": [
+ iron: "cc-pwCVTZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8} = {
  4.316265E+06  8.048803E-06 -4.155954E-06  9.532178E-07 -2.063008E-07 -4.009367E-07 -6.966042E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -466,7 +466,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Triple-zeta Basis Set for Co
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- cobalt: "cc-pwCVTZ": [
+ cobalt: "cc-pwCVTZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8} = {
  4.675675E+06  7.979026E-06 -4.200240E-06  9.592692E-07 -2.028840E-07 -3.863053E-07 -7.174687E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -543,7 +543,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Triple-zeta Basis Set for Ni
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- nickel: "cc-pwCVTZ": [
+ nickel: "cc-pwCVTZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8} = {
  5.045991E+06  8.208996E-06 -3.657849E-06  9.594149E-07 -2.013753E-07 -3.924245E-07 -7.303633E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -620,7 +620,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Triple-zeta Basis Set for Cu
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- copper: "cc-pwCVTZ": [
+ copper: "cc-pwCVTZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8} = {
  5.430321E+06  7.801026E-06 -4.404706E-06  9.704682E-07 -1.959354E-07 -3.532229E-07 -7.508267E-07  0.000000E+00  0.000000E+00  0.000000E+00
@@ -697,7 +697,7 @@ basis:(
 % Nonrelativistic correlation consistent polarized weighted Core Valence Triple-zeta Basis Set for Zn
 % Downloaded on 05/27/2006 from Kirk Peterson's web site:
 % http://tyr0.chem.wsu.edu/~kipeters/basissets/tm3dbasis.html
- zinc: "cc-pwCVTZ": [
+ zinc: "cc-pwCVTZ-NR": [
   (type: [am = s am = s am = s am = s am = s am = s am = s am = s am = s]
    {exp coef:0 coef:1 coef:2 coef:3 coef:4 coef:5 coef:6 coef:7 coef:8} = {
  5.820021E+06  8.549241E-06 -2.640069E-06  9.967103E-07  1.995818E-07 -5.435910E-07  8.040791E-07  0.000000E+00  0.000000E+00  0.000000E+00
