Complete task: factorized GaussianBasisSetSum into UnionBasisSet and GaussianBasisSetMap.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409412

--- a/mpqc/src/lib/chemistry/qc/basis/btest.kv
+++ b/mpqc/src/lib/chemistry/qc/basis/btest.kv
@@ -126,7 +126,12 @@ concat1<GaussianBasisSet>: (
 
 concat2<GaussianBasisSet>: (
    molecule = $:molecule
-   name = "cc-pV6Z"
+   name = "cc-pVDZ"
+)
+
+concat12<UnionBasisSet>: (
+   basis1 = $:concat1
+   basis2 = $:concat2
 )
 
 test : [
